import cleanup, minor "UTF-8" to enum